teaching + slides lagos

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <span class="journal">COCOON 2025</span>
     <a href="https://arxiv.org/abs/2411.04846">ArXiv Preprint</a>
     <br>
-    <a href="s/2CCEDVS_COCOON.pdf">Conference Slides</a>
+    <a href="slides/2CCEDVS_COCOON.pdf">Conference Slides</a>
 </div>
 </div>
 <div class="description-tooltip">
@@ -208,6 +208,7 @@
     <b>Möbius stanchion system</b>
     <span class="coauthors">with Timothée Pecatte</span>
     <span class="journal">LAGOS 2017</span>
+    <a href="slides/LAGOS-stanchion.pdf">Conference Slides</a>
 </div>
 <div class="description-tooltip">
     <img src="img/stanchion.jpg">
