--- a/teaching/index.html
+++ b/teaching/index.html
@@ -25,5 +25,39 @@
             <span class="journal">...</span>
             <a href="">zip</a>
         </div>
+
+        <div class="article">
+            <b>Analyse 2 pour data scientists</b>
+            <span class="journal">L2</span>
+            <span class="journal">Suites, séries, séries entières</span>
+            <br>
+            <a href="paulva/analyse2_CM2.pdf">CM2</a><br>
+            <a href="paulva/analyse2_CM3.pdf">CM3</a><br>
+            <a href="paulva/analyse2_CM4.pdf">CM4</a><br>
+            <a href="paulva/analyse2_CM5.pdf">CM5</a><br>
+            <a href="paulva/analyse2_CM6.pdf">CM6</a><br>
+            <a href="paulva/analyse2_CM7.pdf">CM7</a><br>
+            <a href="paulva/analyse2_CM8.pdf">CM8</a><br>
+            <a href="paulva/analyse2_CM9.pdf">CM9</a><br>
+            <a href="paulva/analyse2_CM10.pdf">CM10</a><br>
+            <br>
+
+            <a href="paulva/analyse2_TD3.pdf">TD3</a><br>
+            <a href="paulva/analyse2_TD4.pdf">TD4</a><br>
+            <a href="paulva/analyse2_TD5.pdf">TD5</a><br>
+            <a href="paulva/analyse2_TD6.pdf">TD6</a><br>
+            <a href="paulva/analyse2_TD7.pdf">TD7</a><br>
+            <a href="paulva/analyse2_TD8.pdf">TD8</a><br>
+            <a href="paulva/analyse2_TD9.pdf">TD9</a><br>
+            <a href="paulva/analyse2_TD10.pdf">TD10</a><br>
+            <a href="paulva/analyse2_TD11.pdf">TD11</a><br>
+            <a href="paulva/analyse2_TD12.pdf">TD12</a><br>
+
+            <br>
+            <a href="paulva/analyse2_partiel.pdf">partiel</a><br>
+            <a href="paulva/analyse2_examen.pdf">TD12</a><br>
+
+            
+        </div>
     </body>
 </html>
