teaching: bd et maths

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -7,8 +7,8 @@
 
         <div class="article">
             <b>Le système Linux, le shell et les scripts bash</b>
-            <span class="coauthors">L1</span>
-            <span class="journal">...</span>
+            <span class="coauthors">Cours à destination d'une CPES (Classe Préparatoires aux Études Supérieures) en première année</span>
+            <span class="journal">Le format de ce cours est un cours intégré : la séance de 3h commence par un cours puis se termine par des exercices.</span>
             <a href="cpes_systeme/Cours/CM1.html">CM1</a><br>
             <a href="cpes_systeme/Cours/CM2.html">CM2</a><br>
             <a href="cpes_systeme/Cours/CM3.html">CM3</a><br>
@@ -24,28 +24,46 @@
             <a href="cpes_systeme/Cours/TP4.zip">TP4</a><br>
             <a href="cpes_systeme/Cours/TP8.zip">TP8</a><br>
             <br>
-            <a href="">Sources</a>
+            <a href="cpes_systeme/Partiel/enonce.html">Partiel : sujet</a><br>
+            <a href="cpes_systeme/Examen/ExamenVersionEtudiants/sujet.html">Examen : sujet</a><br>
+            <br>
+            <a href="cpes_systeme.zip">Sources, corrections</a>
             
         </div>
 
         <div class="article">
             <b>Bases de données</b>
-            <span class="coauthors">L1</span>
-            <span class="journal">...</span>
-            <a href="">zip</a>
+            <span class="coauthors">Cours à destination d'une CPES (Classe Préparatoires aux Études Supérieures) en première année</span>
+            <span class="journal">Le format de ce cours est un cours intégré : la séance de 3h commence par un cours puis se termine par des exercices.</span>
+            <a href="cpes_bd/cours/TD1.pdf">TD1</a><br>
+            <a href="cpes_bd/cours/TD2.html">TD2</a><br>
+            <a href="cpes_bd/cours/TD3.html">TD3</a><br>
+            <a href="cpes_bd/cours/TD4.html">TD4</a><br>
+            <a href="cpes_bd/cours/TD5.html">TD5</a><br>
+            <a href="cpes_bd/cours/TD6.html">TD6</a><br>
+            <a href="cpes_bd/cours/TD7.html">TD7</a><br>
+            <a href="cpes_bd/cours/TD8.html">TD8</a><br>
+            <a href="cpes_bd/cours/TD9.html">TD9</a><br>
+            <a href="cpes_bd/cours/TD10.html">TD10</a><br>
+            <a href="cpes_bd/cours/TD11.pdf">TD11</a><br>
+            <br>
+            <a href="cpes_bd/partiel/sujet.pdf">Partiel : sujet</a><br>
+            <a href="cpes_bd/examen/dist/examen_sujet.pdf">Examen : sujet</a><br>
+            <br>
+            <a href="cpes_bd.zip">Sources, corrections</a><br>
         </div>
 
         <div class="article">
             <b>Algèbre avancée pour data scientists</b>
-            <span class="coauthors">L3</span>
-            <span class="journal">...</span>
-            <a href="">zip</a>
+            <span class="coauthors">Cours à destination d'une L3 en Data Science : pas de démonstrations, les étudiants apprennent juste à utiliser les outils et les notions.</span>
+            <span class="journal">Contenu : diagonalisation, espaces euclidens, algorithme de Gram-Schmidt, décomposition QR</span>
+            <a href="algebre3/cours_td.pdf">Cours et TD</a>
         </div>
 
         <div class="article">
             <b>Analyse 2 pour data scientists</b>
-            <span class="journal">L2</span>
-            <span class="journal">Suites, séries, séries entières</span>
+            <span class="coauthors">Cours à destination d'une L2 en Data Science : pas de démonstrations, les étudiants apprennent juste à utiliser les outils et les notions.</span>
+            <span class="journal">Contenu : suites, séries, séries entières, intégration</span>
             <br>
             <a href="analyse2/analyse2_CM2.pdf">CM2</a><br>
             <a href="analyse2/analyse2_CM3.pdf">CM3</a><br>
@@ -70,8 +88,8 @@
             <a href="analyse2/analyse2_TD12.pdf">TD12</a><br>
 
             <br>
-            <a href="analyse2/analyse2_partiel.pdf">partiel</a><br>
-            <a href="analyse2/analyse2_examen.pdf">TD12</a><br>
+            <a href="analyse2/analyse2_partiel.pdf">Partiel : sujet</a><br>
+            <a href="analyse2/analyse2_examen.pdf">Examen : sujet</a><br>
 
             
         </div>
