On the Complexity of Vertex-Splitting Into an Interval Graph

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 <h2>Submitted Papers</h2>
 
 <div class="article">
+    <b>On the Complexity of Vertex-Splitting Into an Interval Graphh</b>
+    <span class="coauthors">with Faisal N. Abu-Khzam, Dipayan Chakraborty and Nacim Oijid</span>
+    <span class="journal">Submitted</span>
+    <a href="https://arxiv.org/abs/2602.04628">ArXiv Preprint</a>
+</div>
+<div class="description-tooltip">
+
+</div>
+
+<div class="article">
     <b>Correlation Clustering with Overlap: a Heuristic Graph Editing Approach</b>
     <span class="coauthors">with Faisal N. Abu-Khzam and Sergio Thoumi</span>
     <span class="journal">Submitted</span>
