article: with Kimani

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <link href="style.css" rel="stylesheet">
     </head>
@@ -20,10 +21,10 @@
 <h1>Research interests</h1> 
 
 <ul>
-    <li>Graph theory: planar graphs, intersection graphs, tournaments</li>
-    <li>Combinatorics: order (or Dushnik-Miller) dimension and intersection complexes</li>
-    <li>Complexity: clusters in graphs, distance identifying problems</li>
-    <li>Heuristic algorithms: graph clustering and biclustering</li>
+    <li><i>Graph theory</i>: planar graphs, intersection graphs, tournaments</li>
+    <li><i>Combinatorics</i>: order (or Dushnik-Miller) dimension and intersection complexes</li>
+    <li><i>Complexity</i>: clusters in graphs, distance identifying problems</li>
+    <li><i>Heuristic algorithms</i>: graph clustering and biclustering</li>
 </ul>
 
 
@@ -32,14 +33,22 @@
 
 <h2>Submitted Papers</h2>
 
+
+
+
+
 <div class="article">
-    <b>On the Complexity of Vertex-Splitting Into an Interval Graphh</b>
+    <b>On the Complexity of Vertex-Splitting Into an Interval Graph</b>
     <span class="coauthors">with Faisal N. Abu-Khzam, Dipayan Chakraborty and Nacim Oijid</span>
     <span class="journal">Submitted</span>
     <a href="https://arxiv.org/abs/2602.04628">ArXiv Preprint</a>
 </div>
 <div class="description-tooltip">
+    An <b>Interval Graph</b> is the intersection graph of intervals.
+    A vertex splitting consists in replacing a vertex by two vertices such that every neighbor of the original vertex is adjacent to at least one of the new vertices.
+    <br>
 
+    We study the problem where we want to minimize the number of splits to turn a graph in an interval graph.
 </div>
 
 <div class="article">
@@ -88,6 +97,18 @@
 </div>
 
 <h2>International conferences</h2>
+
+<div class="article">
+    <b>A Comparison of Artificial Intelligence and Statistical
+        Models for Identifying Mixtures in Contaminant Data</b>
+    <span class="coauthors">
+        with Kimani Kimbrough, Faisal N. Abu-Khzam, Joseph R. Barr, Erik Davenport
+    <span class="journal">AI Workshop at Embry-Riddle Aeronautical University, 2025</span>
+   
+</div>
+<div class="description-tooltip">
+
+</div>
 
 <div class="article">
     <b>Bicluster Editing with Overlaps: A Vertex Splitting Approach</b>
