--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <link href="style.css" rel="stylesheet">
+        <title>Lucas Isenmann — Computer Science Researcher</title>
+        <meta name="description" content="Lucas Isenmann — Assistant Professor in Computer Science at the University of Strasbourg, specializing in graph theory, combinatorics, and heuristic algorithms.">
     </head>
     <body>
 
@@ -18,7 +20,7 @@
 
 <br>
 
-<h1>Research interests</h1> 
+<h2>Research interests</h2> 
 
 <ul>
     <li><i>Graph theory</i>: planar graphs, intersection graphs, tournaments</li>
@@ -28,10 +30,22 @@
 </ul>
 
 
+<h2>Thesis</h2>
 
-<h1>Publications</h1>
 
-<h2>Submitted Papers</h2>
+<div class="article">
+    <b>From planar graphs to higher dimension</b>
+    <span class="coauthors">PhD Thesis supervised by Daniel Gonçalves</span>
+    <span class="journal">Defended in 2019</span>
+    <a href="https://theses.hal.science/tel-02931761/">HAL</a>
+</div>
+
+
+
+
+<h2>Publications</h2>
+
+<h3>Submitted Papers</h3>
 
 
 
@@ -58,7 +72,7 @@
     <a href="https://arxiv.org/abs/2412.02704">ArXiv Preprint</a>
 </div>
 <div class="description-tooltip">
-    <img src="img/cluster_vertex_splitting.png">
+    <img src="img/cluster_vertex_splitting.png" alt="Example of a graph clustered in two groups">
     <b>Cluster Editing</b> consists in adding and deleting edges so that the resulting graph is an union of cliques.
     The problem is that this model does not allow data to be contained in several clusters.
 
@@ -68,7 +82,7 @@
 
 
 
-<h2>Journal Publications</h2>
+<h3>Journal Publications</h3>
 
 <div class="article">
     <b>Dushnik-Miller dimension of TD-Delaunay complexes</b>
@@ -78,11 +92,11 @@
     <a href="https://arxiv.org/abs/1803.09576">ArXiv Preprint</a>
 </div>
 <div class="description-tooltip">
-    <img src="img/DM.jpg">
+    <img src="img/DM.jpg" alt="Example of a partial order and a realizer.">
 
     The <b>Dushnik-Miller dimension</b> (also known as order dimension) of a partial order is the minimum number of linear orders such that the partial order is the intersection of these orders.
 
-    <img src="img/TDD.jpg">
+    <img src="img/TDD.jpg" alt="A TDD graph">
     A <b>TD-Delaunay complex</b> is the complex obtained from a set of points in dimension d such that a subset of these points is a face if and only the TD-Delaunay region of this point does not contain any point in its interior.
 </div>
 
@@ -96,18 +110,16 @@
     The metric dimension of a graph is the minimum size of a subset of vertices such that the distances to these vertices identify all the vertices of the graph.
 </div>
 
-<h2>International conferences</h2>
+<h3>International conferences</h3>
 
 <div class="article">
     <b>A Comparison of Artificial Intelligence and Statistical
         Models for Identifying Mixtures in Contaminant Data</b>
     <span class="coauthors">
-        with Kimani Kimbrough, Faisal N. Abu-Khzam, Joseph R. Barr, Erik Davenport
+        with Kimani Kimbrough, Faisal N. Abu-Khzam, Joseph R. Barr, Erik Davenport</span>
     <span class="journal">AI Workshop at Embry-Riddle Aeronautical University, 2025</span>
-   
 </div>
 <div class="description-tooltip">
-
 </div>
 
 <div class="article">
@@ -119,7 +131,7 @@
     <a href="slides/BCEVS_iwoca_slides.pdf">Conference Slides</a>
 </div>
 <div class="description-tooltip">
-    <img src="img/BCEVS.png">
+    <img src="img/BCEVS.png"  alt="A bipartite graph with two clusters which are bicliques">
 
     <b>Bicluster Editing with Overlaps</b> consists in splitting the vertices of a bipartite graph and deleting or adding edges so that the graph becomes an union of bicliques.
 </div>
@@ -132,9 +144,8 @@
     <br>
     <a href="slides/2CCEDVS_COCOON.pdf">Conference Slides</a>
 </div>
-</div>
 <div class="description-tooltip">
-    <img src="img/2CCEDVS.png">
+    <img src="img/2CCEDVS.png" alt="A graph and two clusters which are 2-clubs">
     A 2-club is graph with diameter at most 2 (each pair of vertices are at distance at most 2).
     <b>2-Club Cluster Editing with Vertex Splitting</b> consists in adding and removing edges and split vertices so that the resulting graph is an union of 2-clubs.
 </div>
@@ -166,7 +177,7 @@
     <a href="https://arxiv.org/abs/2212.06007">ArXiv Preprint</a>
 </div>
 <div class="description-tooltip">
-    <img src="img/DW.png">
+    <img src="img/DW.png" alt="A tournament with an order minimizing the number of backward arcs">
     The <b>degreewidth</b> of a tournament is the minimum of the maximum number of backward arcs incident to vertices for every order of the vertices.
     We prove
     <ul>
@@ -180,7 +191,7 @@
     <span class="journal">FRCSS 2021</span>
 </div>
 <div class="description-tooltip">
-    <img src="img/duniter.png">
+    <img src="img/duniter.png" alt="An directed graph satisfying the Duniter rules.">
 
     Duniter is a cryptocurrency wher each user is generating money on a regular basis.
     To avoid Sybil attacks (i.e. that malicious users create fake accounts and gain more money), some graph theoritical rules.
@@ -242,22 +253,13 @@
     <a href="slides/LAGOS-stanchion.pdf">Conference Slides</a>
 </div>
 <div class="description-tooltip">
-    <img src="img/stanchion.jpg">
+    <img src="img/stanchion.jpg" alt="A plane graph and a Mobius stanchion system">
     Given a plane graph, we "twist" some edges and then we compute the cycles around the edges.
     When there is only one cycle, we say that it is a Möbius stantchion system.
 </div>
 
 
 
-<h2>Thesis</h2>
-
-
-<div class="article">
-    <b>From planar graphs to higher dimension</b>
-    <span class="coauthors">PhD Thesis supervised by Daniel Gonçalves</span>
-    <span class="journal">Defended in 2019</span>
-    <a href="https://theses.hal.science/tel-02931761/">HAL</a>
-</div>
 
 
 <h2>Softwares</h2>
